<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/artwork"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/about_bs" />

    <EditText
        android:id="@+id/editText_ins_password"
        android:hint="@string/hint_ins_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_appname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_2"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />


    <EditText
        android:id="@+id/editText_reins_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reins_password"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_ins_password"
        android:layout_alignLeft="@+id/editText_ins_password"
        android:layout_alignStart="@+id/editText_ins_password" />


    <Button
        android:id="@+id/button_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/baracca_software"
        android:id="@+id/baracca_software_presents"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
