<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <EditText
        android:id="@+id/editText_pass1_alertdialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword" >
        <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/editText_pass2_alertdialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="54dp"
        android:hint="@string/imposta_password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_pass3_alertdialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="94dp"
        android:hint="@string/reins_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    

</RelativeLayout>
