<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/lockapp_background">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_alert_dialog_locked_app"
                android:id="@+id/app_locked_title_dialog"
                android:singleLine="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"

                />
        </RelativeLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_password_locked_app"
            android:hint="@string/hint_edtx"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock_app_positive_button"
            android:id="@+id/button_unlock_app"
            android:layout_below="@+id/editText_password_locked_app"
            android:layout_alignLeft="@+id/editText_password_locked_app"
            android:layout_alignStart="@+id/editText_password_locked_app"
            android:layout_alignRight="@+id/editText_password_locked_app"
            android:layout_alignEnd="@+id/editText_password_locked_app"
            android:layout_margin="10dp"
            />

    </LinearLayout>
</RelativeLayout>