<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNoteActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/artwork"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView1_addnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:contentDescription="@string/image_view_presentation"
        />



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_delete_img"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/ic_cancel"/>



    <com.baraccasoftware.securenotes.widget.SlidingDrawer
        android:id="@+id/sliding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        custom:content="@+id/popup_window"
        custom:handle="@+id/imageButton_addnote"
        custom:orientation="1"
        android:rotation="180"

        >
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:id="@+id/imageButton_addnote"
        android:background="#FF888888"
        android:src="@drawable/ic_collapse"
        />

    <LinearLayout
        android:id="@+id/popup_window"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"

        android:background="@color/popup_gray_s"
        android:rotation="180"
        android:layout_alignParentStart="true"
        android:layout_weight="0.87">


        <EditText
            android:id="@+id/editText_titolo_addnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:textColorHint="#4c4c4c"
            android:ems="10"
            android:textStyle="bold"
            android:inputType="textCapSentences"
            android:background="#00000000"
            android:hint="@string/add_title" >

            <requestFocus />
        </EditText>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editText_text_addnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="14dp"
            android:background="#00000000"
            android:ems="10"
            android:hint="@string/add_text"
            android:inputType="textMultiLine|textCapSentences" />



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_data_addnote"
            android:textColor="#696969"
            android:layout_marginTop="2dp"
            android:layout_gravity="right" />

    </LinearLayout>
    </com.baraccasoftware.securenotes.widget.SlidingDrawer>

    <LinearLayout android:id="@+id/undobar_detail_activity" style="@style/UndoBar"
        android:layout_alignParentBottom="true">
        <TextView android:id="@+id/undobar_message" style="@style/UndoBarMessage" />
        <Button android:id="@+id/undobar_button" style="@style/UndoBarButton" />


    </LinearLayout>



</RelativeLayout>
